--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,6 @@ spring:
     basename: messages, ValidationMessages, PropertyNames
     cache-duration: -1
     encoding: UTF-8
+
+mybatis:
+  mapper-locations: classpath:mybatis/mapper/**/**.xml
